--- a/login.css
+++ b/login.css
@@ -1,65 +1,137 @@
 html,
 body {
-  height: 100%;
+    margin: 0 0;
+    font-family: 'Poppins', sans-serif;
+    text-shadow: 2px 2px 8px #676767;
+    background-color: #D7D7D7;
 }
 
-body {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-align: center;
-  align-items: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #d7d7d7;
+nav {
+    text-align: right;
 }
 
-.form-signin {
-  width: 100%;
-  max-width: 350px;
-  padding: 15px;
-  margin: auto;
-  height: 350px;
-  font-size: 1.5em;
-  
-  /*Neumorphism CSS */
-  border-radius: 50px;
-  background: #d7d7d7;
-  box-shadow:  41px 41px 82px #acacac, -41px -41px 82px #ffffff;
+ul {
+    width: auto;
+    float: right;
+    margin-top: 3px;
+    text-decoration: none;
 }
 
-.form-signin .form-control {
-  position: relative;
-  box-sizing: border-box;
-  height: auto;
-  padding: 10px;
-  font-size: 16px;
-}
-.form-signin .form-control:focus {
-  z-index: 2;
-}
-.form-signin input[type="text"] {
-  margin-bottom: 10px;
-  /*Neumorphism CSS */
-  border-radius: 50px;
-  background: #d7d7d7;
-  box-shadow:  -34px -34px 68px #9d9d9d, 34px 34px 68px #ffffff;
-}
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  /*Neumorphism CSS */
-  border-radius: 50px;
-  background: #d7d7d7;
-  box-shadow:  -34px -34px 68px #9d9d9d, 34px 34px 68px #ffffff;
+
+
+
+nav ul li {
+    display: inline-block;
+    padding: 15px 30px;
+    font-family: Courier;
+    color: black;
+    text-shadow: none;
+    text-decoration: none;
+
 }
 
-.form-signin button[type="submit"] {
-  font-size: 1em;
-  /*Neumorphism CSS */
-  border-radius: 50px;
-  background: #d7d7d7;
-  box-shadow:  -34px -34px 68px #9d9d9d, 34px 34px 68px #ffffff;
+a {
+    text-align: center;
+    color: black;
+    text-decoration: none;
 }
 
-.inside-form {
-  text-align: center;
+a:hover {
+    color: white;
+    transition: 0.3s;
+    text-decoration: none;
+}
+
+
+
+.row {
+    height: 100vh;
+    background-color: #D7D7D7;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+
+}
+
+
+.row .form {
+    margin-bottom: 8%;
+    margin-top: 8%;
+    margin-left: 8%;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #D7D7D7;
+
+    height: 380px;
+    width: 320px;
+    border-radius: 60px;
+    background: #D7D7D7;
+    box-shadow: 33px 33px 66px #b7b7b7,
+        -33px -33px 66px #f7f7f7;
+}
+
+
+.row .form h1 {
+    margin-bottom: 24px;
+    margin-top: 7px;
+    font-size: 40px;
+    text-align: center;
+
+}
+
+.row .form input {
+    outline: none;
+    border: none;
+    margin-bottom: 30px;
+    font-size: 12px;
+    padding: 13px;
+    width: 230px;
+    font-family: Helvetica;
+
+    border-radius: 68px;
+    background: #D7D7D7;
+    box-shadow: inset 12px 12px 24px #b7b7b7,
+        inset -12px -12px 24px #f7f7f7;
+}
+
+.row .form button {
+    border: none;
+    outline: none;
+    font-size: 14px;
+    padding: 12px;
+    margin-top: 20px;
+    width: 120px;
+
+
+
+    border-radius: 35px;
+    background: #D7D7D7;
+    box-shadow: 12px 12px 24px #b7b7b7,
+        -12px -12px 24px #f7f7f7;
+
+}
+
+.row .form button:hover {
+
+    border-radius: 35px;
+    background: #D7D7D7;
+    box-shadow: inset 16px 16px 31px #b7b7b7,
+        inset -16px -16px 31px #f7f7f7;
+
+}
+
+
+
+@media screen and (max-width:600px) {
+
+    nav ul li {
+        text-align: right;
+        width: 100%;
+    }
+
+
 }
