--- a/style.css
+++ b/style.css
@@ -124,7 +124,62 @@ a:hover {
 
 }
 
+.row .package {
+    margin-bottom: 8%;
+    margin-top: 8%;
+    margin-left: 8%;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #D7D7D7;
 
+    height: 420px;
+    width: 320px;
+    border-radius: 68px;
+    background: #d7d7d7;
+    box-shadow: inset 41px 41px 82px #b7b7b7, 
+            inset -41px -41px 82px #f7f7f7;
+}
+
+
+.row .package h1 {
+    margin-bottom: 24px;
+    margin-top: 7px;
+    font-size: 40px;
+    text-align: center;
+
+}
+
+.row .package button {
+    border: none;
+    outline: none;
+    font-size: 14px;
+    padding: 12px;
+    margin-top: 20px;
+    width: 120px;
+    
+    
+
+    border-radius: 35px;
+    background: #D7D7D7;
+    box-shadow: 12px 12px 24px #b7b7b7,
+        -12px -12px 24px #f7f7f7;
+
+}
+
+.row .package button:hover {
+
+    border-radius: 35px;
+    background: #D7D7D7;
+    box-shadow: inset 16px 16px 31px #b7b7b7,
+        inset -16px -16px 31px #f7f7f7;
+
+}
+
+.row .package form {
+    text-align: center;
+}
 
 @media screen and (max-width:600px) {
 
