--- a/style.css
+++ b/style.css
@@ -196,28 +196,6 @@ div .room {
              -12px -12px 27px #ffffff;
 }
 
-div .heart {
-    position: relative;
-    border-radius: 166px;
-    background: #d7d7d7;
-    box-shadow:  6px 6px 20px #949494, 
-             -6px -6px 20px #ffffff;
-}
-
-div .heart img {
-    position: relative;
-    height: 20px;
-    width: 20px;
-}
-
-div .heart a {
-    position: relative;
-    width:100%;
-    height:100%;
-    top:0px;
-    left:0px;
-}
-
 .scrollmenu {
     overflow: auto;
     white-space: nowrap;
@@ -371,4 +349,63 @@ box-shadow: inset 35px 35px 70px #b7b7b7,
     background: #D7D7D7;
     box-shadow: inset 12px 12px 24px #b7b7b7, 
                 inset -12px -12px 24px #f7f7f7;              
+}
+
+/* feed start */
+.feedRow {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+.room {
+    margin: 30px 30px;
+    
+    height: 100%;
+    width: 30%;
+    display: flex;
+    background-color: #D7D7D7;
+    border-radius: 56px;
+    background: #d7d7d7;
+    box-shadow:  12px 12px 27px #8e8e8e, 
+             -12px -12px 27px #ffffff;
+}
+
+.room p{
+    padding-top: 10px;
+}
+
+.room img{
+    height: auto;
+    width: auto;
+}
+.feedRow div {
+    display: inline-block;
+    text-align: center;
+    padding: 30px;
+}
+
+div .heart {
+    position: relative;
+    border-radius: 166px;
+    background: #d7d7d7;
+    box-shadow:  6px 6px 20px #949494, 
+             -6px -6px 20px #ffffff;
+}
+
+div .heart img {
+    position: relative;
+    height: 20px;
+    width: 20px;
+}
+
+div .heart a {
+    position: relative;
+    width:100%;
+    height:100%;
+    top:0px;
+    left:0px;
 }
