--- a/style.css
+++ b/style.css
@@ -390,25 +390,22 @@ box-shadow: inset 35px 35px 70px #b7b7b7,
 
 div .heart {
     position: relative;
+    float: right;
     border-radius: 166px;
     background: #d7d7d7;
     box-shadow:  6px 6px 20px #949494, 
              -6px -6px 20px #ffffff;
 }
 
-div .heart img {
+div .heart form {
     position: relative;
-    height: 20px;
-    width: 20px;
-}
-
-div .heart a {
-    position: relative;
-    width:100%;
-    height:100%;
+    height: 25px;
+    width: 25px;
     top:0px;
     left:0px;
 }
+
+/*feed end*/
 
 .content#blur.active{
     filter: blur(15px);
