--- a/style.css
+++ b/style.css
@@ -387,7 +387,7 @@ box-shadow: inset 35px 35px 70px #b7b7b7,
     padding: 30px;
 }
 
-div .heart {
+div .heart, div form .heart {
     position: relative;
     float: right;
     border-radius: 166px;
@@ -396,7 +396,7 @@ div .heart {
              -6px -6px 20px #ffffff;
 }
 
-div .heart form {
+div .heart form, div form .heart{
     position: relative;
     height: 25px;
     width: 25px;
