--- a/style.css
+++ b/style.css
@@ -431,8 +431,9 @@ div .heart form, div form .heart{
     transition: 0.3s;
     color: #ffffff;
     text-shadow: none;
-    height: 700px;
+    height: 800px;
 }
+
 
 #popup.active
 {
@@ -466,6 +467,15 @@ div .heart form, div form .heart{
         color: black;
         text-shadow: 2px 2px 8px #676767;
         outline: none;
+        float: right;
+}
+
+.popupButton:hover
+{
+    border-radius: 50px;
+background: #d7d7d7;
+box-shadow: inset 12px 12px 24px rgba(38, 38, 38, 0.3), 
+            inset -12px -12px 24px rgba(247, 247, 247, 0.6);
 }
 
 .popupOption
@@ -554,7 +564,7 @@ box-shadow:  30px 30px 60px #b7b7b7,
     transition: margin-left 800ms cubic-bezier(0.77, 0.000,0.175,1.000);
     width: 400%;
     line-height: 1;
-    height: 600px;
+    height: 100%;
 }
 
 #slides .slide 
@@ -824,7 +834,11 @@ background: rgba(0, 0, 0, 0.2);
 
 .uploadform form
 {
-    padding: 10%;
+    padding-top: 5%;
+    padding-bottom: 20%;
+    margin-bottom: 5%;
+    padding-left: 5%;
+    padding-right: 10%;
     width: 100%;
     font-family: 'Courier New', Courier, monospace;
     color: black;
@@ -863,3 +877,4 @@ border-radius: 60px;
     box-shadow: 33px 33px 66px #b7b7b7,
         -33px -33px 66px #f7f7f7;
 }
+
