--- a/registerpage.css
+++ b/registerpage.css
@@ -142,3 +142,32 @@
      text-align: center;
  }
  
+/*new radio button design*/
+
+
+input[type=radio] {
+	display: none;
+}
+
+label {
+	cursor: pointer;
+	margin: 10px 10px;
+}
+
+label:before {
+	content: '';
+	display: inline-block;
+	height: 20px;
+	width: 20px;
+	background: darkgrey;
+	border-radius: 50%;
+	z-index: 2;
+	transition: box-shadow .4s ease,
+					background .3s ease;
+}
+
+input:checked + label:before {
+	box-shadow: inset 0px 3px 0 2px darkgrey;
+	background:#f3f3f3;
+}
+
