--- a/style.css
+++ b/style.css
@@ -909,3 +909,84 @@ background: rgba(0, 0, 0, 0.2);
 {
     float: left;
 }
+
+
+
+/* concept taken from. file:///C:/Users/PERRIN~1/AppData/Local/Temp/Rar$EXa20208.39368/Gallery%20Section/index.html*/
+.gallery-section{
+    width: 100%;
+    padding: 60px 0;
+    background: #D7D7D7;
+  }
+  
+  .inner-width{
+    width: 100%;
+    max-width: 1550px;
+    margin: auto;
+    padding: 0 20px;
+  }
+  
+  .gallery-section h1{
+    text-align: center;
+    text-transform: uppercase;
+    color: #333;
+  }
+  
+  .border{
+    width: 180px;
+    height: 4px;
+    background: #333;
+    margin: 60px auto;
+  }
+  
+  .gallery-section .gallery{
+    display: flex;
+    flex-wrap: wrap-reverse;
+    justify-content: center;
+  }
+  
+  .gallery-section .image{
+    flex: 25%;
+    overflow: hidden;
+    cursor: pointer;
+  }
+  
+  .gallery-section .image img{
+    width: 100%;
+    height: 100%;
+    transition: 0.4s;
+  }
+  
+  .gallery-section .image:hover img{
+    transform: scale(1.4);
+    
+    
+  }
+  
+  @media screen and (max-width:960px) {
+    .gallery-section .image{
+      flex: 33.33%;
+    }
+  }
+  
+  @media screen and (max-width:768px) {
+    .gallery-section .image{
+      flex: 50%;
+    }
+  }
+  
+  @media screen and (max-width:480px) {
+    .gallery-section .image{
+      flex: 100%;
+    }
+  }
+  
+
+
+
+
+
+
+
+
+
