--- a/style.css
+++ b/style.css
@@ -983,10 +983,39 @@ background: rgba(0, 0, 0, 0.2);
   
 
 
+ .imgbutton 
+ {
+  
+     float: left;
+     
+}
 
+.col9
+{
+margin: auto;
 
-
-
-
+margin-bottom: 7%;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #D7D7D7;
+   
+    height: 100%;
+    width: 40%;
+    border-radius: 20px;
+    background: #D7D7D7;
+    box-shadow: 33px 33px 66px #b7b7b7,
+        -33px -33px 66px #f7f7f7;
+        
+}
+.col9:hover
+{
+    border-radius: 20px;
+    background: #D7D7D7;
+    box-shadow: inset 35px 35px 70px #b7b7b7, 
+                inset -35px -35px 70px #f7f7f7;
+              text-align: left;  
+}
 
 
